--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <section class="subscribe-description">
 
                   <p>
-Lorem Ipsum is simply dummy text of the printing and typesetting industry It was popularised in the 1960s with the release of Letraset.</p>
+Lorem Ipsum is simply dummy text of a printing and typesetting industry It was popularised in the 1960s with the release of Letraset.</p>
                   
                 </section> <!-- /.subscribe-description -->
                 
